--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,8 +3,10 @@
     <string name="action_settings">Settings</string>
     <string name="edit_message">Enter a message</string>
     <string name="button_send">Send</string>
-    <string name="title_activity_display_message">Display Message</string>
+    <string name="title_activity_display_message">Settings</string>
     <string name="new_item">Item</string>
     <string name="settingsCopyright">© 2016 Benjamin Schmid</string>
     <string name="checklistEditButton">edit</string>
+    <string name="checklistChildsButton">childs</string>
+    <string name="SettingsResetButton">Reset</string>
 </resources>
